fixed image not fitting on monkey border

--- a/cardeditor.css
+++ b/cardeditor.css
@@ -112,7 +112,7 @@ input[type="file"] {
 }
 .card-img {
 	width: 100%;
-  	height: 100%;
+  	height: 95%;
 	transform: translate(-50%);
 	left: 50%;
 	object-fit: cover;
